# nearby_beverage_explorer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
deploy/: cloudformation_deploy.py
deploy/modules/: __init__.py  cloudformation_manager.py  command_runner.py  ecr_manager.py  s3_manager.py  version_manager.py
docs/: index.html
docs/assets/: hyparquet-39546154.js  hyparquet-add89dc3.js  hyparquet-eca58082.js  index-30a3bc56.css  index-c8764b83.css  main-20c26f03.js  main-6ae9348e.js  main-f7624d15.js
sample_data/: place_details.json
scripts/: apply_cors_to_s3.sh
src/: config.py  main.py  read_table.py
src/cloudformation/: iam.yaml  lambda.yaml  serverless.yaml  stepfunctions.yaml  storage.yaml
src/docker/: Dockerfile  README.md  build_and_push.sh  spark-class
src/docker/google_places_collector/: __init__.py  google_places_client.py  main.py  requirements.txt  storage.py
src/docker/hudi_to_parquet/: __init__.py  main.py  requirements.txt
src/docker/json_to_hudi/: __init__.py  main.py
src/web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
src/web/assets/styles/: main.css
src/web/src/: App.vue  dataService.js  exportService.js  locationService.js  main.js  tableService.js  utils.js
tests/: conftest.py  test_hudi_to_parquet.py  test_json_to_hudi.py  test_spark_hudi_functions.py
tests/integration/: test_google_places_integration.py
